--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Frontend Mentor | Four Card Feature Section | Js OOP</title>
+		<title>Frontend Mentor | Four Card Feature Section | JS OOP</title>
 
 		<!-- Core Meta Data -->
 		<meta
